--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <meta name="theme-color" content="#1D0093"/>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins"
       rel="stylesheet"
